--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demo chat app showcasing GraphQL Subscriptions, AWS AppSync and authentication using Amazon Congito",
   "author": "Graham McCulloch",
   "license": "MIT",
-  "homepage": "https://grahammcculloch.github.io/graphql-chat/",
+  "homepage": "https://grahammcculloch.github.io/realtime-chat/",
   "private": true,
   "dependencies": {
     "aws-amplify": "^0.3.0",
@@ -31,6 +31,11 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
